[package]
name = "sbt_rating"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
homepage = "https://github.com/zubayr1/sbt_rating"
repository = "https://github.com/zubayr1/sbt_rating"
keywords = ["solana", 
    "anchor", 
    "sbt", 
    "ratings",]
categories = ["finance", "cryptography"]
license = "MIT"
readme = "readme.MD"

[lib]
crate-type = ["cdylib", "lib"]
name = "sbt_rating"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
